# LatPack

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README.md  configure.ac  initialize_configure.sh
biu/: ChangeLog  README.md  TODO  biu.pc  biu.pc.in
biu-2.3.7/: AUTHORS  Makefile.am  configure.ac
biu-2.3.7/misc/doxygen/: Makefile.am  doxygen.config  header.html  stylesheet.css
biu-2.3.7/src/biu/: RandomNumberGenerator.cc  RandomNumberGenerator.hh
biu-2.3.7/tests/: Makefile.am  testAllowedBasePairs.cc  testAlphabet.cc  testContactEnergyFunction.cc  testGraph_UD.cc  testIntervalEnergyFunction.verified  testLatticeDescriptorCUB.cc  testLatticeDescriptorCUB.verified  testLatticeDescriptorSQR.cc  testLatticeDescriptorSQR.verified  testLatticeDescriptors.verified  testLatticeFrame.cc  testLatticeFrame.verified  testLatticeModel.cc  testLatticeNeighborhood.cc  testLatticeNeighborhood.verified  testLatticeProteinUtil.verified  testLatticeProtein_Ipnt.cc  testLimitedHash.cc  testMatrix.cc  testNeighborVector.cc  testNeighborVector.verified  testOptionParser.cc  testOptionParser.verified  testPivotMoveSet.verified  testPoint.cc  testPoint.verified  testPullMoveSet.cc  testQuasiRandomNumberGenerator.cc  testQuasiRandomNumberGenerator.verified  testRNG_ARS4x32.cc  testRNG_ARS4x32.verified  testSquareMatrix.cc  testUtilLattice.cc  testUtilLattice.verified  testVirtualList.cc  testVirtualList.verified
biu/src/: Makefile.am  doxygen.hh  doxygen.hh.in
biu/src/biu/: HashMap.hh  RNAStructure_TB.cc
biu/tests/: LatticeProteinUtil.hh  testAllowedBasePairs.verified  testAlphabet.verified  testContactEnergyFunction.verified  testGraph_UD.verified  testIntervalEnergyFunction.cc  testLatticeDescriptors.cc  testLatticeModel.verified  testLatticeProteinUtil.cc  testLatticeProtein_Ipnt.verified  testLimitedHash.verified  testMatrix.verified  testMatrixSparse.cc  testMatrixSparse.verified  testPivotMoveSet.cc  testPullMoveSet.verified  testRNAStructure_TB.cc  testRNAStructure_TB.verified  testRNG_LCG.cc  testRNG_LCG.verified  testSquareMatrix.verified  testUtilString.cc  testUtilString.verified
doc/: .gitignore  version-info.tex
energy/: HP.txt  HPNX.txt  HPNX_dist.txt  HP_dist.txt  MJ.txt  Makefile.am
pub-data/: README.md  latFit-PDB-IDs.txt
src/: .gitignore  latConv.cc  latFit.cc  latFold.cc  latFoldVec.cc  latVec.cc  version.hh
